# sdwebui-gateway

./: .gitignore  Cargo.toml  README.md
sdwebuiapi/: Cargo.toml  README.md
sdwebuiapi/src/: client.rs  enums.rs  lib.rs  sdwebuiclient.rs  types.rs
src/: main.rs
test-client/: Cargo.toml
test-client/src/: main.rs
