[package]
name = "sdwebuiapi"
description = "A library for interacting with openapi of AUTOMATIC1111/stable-diffusion-webui"
version = "0.0.4"
repository = "https://github.com/web3nomad/sdwebui-gateway"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = "1.32.0"
