[package]
name = "test-client"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.4.0"
sdwebuiapi = { path = "../sdwebuiapi" }
tokio = { version = "1.32.0", features = ["full"] }
